--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -32,7 +32,7 @@ $large-breakpoint: 36rem;
   --color-shades-primary-glare: #68778d;
   --color-shades-primary-bright: #e7f0fd;
   --color-shades-secondary: #444;
-  --color-shades-secondary-glare: #68778d;
+  --color-shades-secondary-glare: #726e6e;
   --color-shades-secondary-bright: #e5e5e5;
   --color-shades-tertiary-bright: #fff;
   --color-shades-gray: #585b63;
@@ -48,7 +48,6 @@ $large-breakpoint: 36rem;
   --color-code-quaternary: #385d34;
   --color-code-quaternary-glare: #52894c;
   --color-code-quaternary-bright: #9cc598;
-
   --color-primary-info-text: var(--color-primary-info);
   --color-primary-info-bg: var(--color-shades-secondary-bright);  
   --color-shades-primary-text: var(--color-shades-primary);
