Add flex and flow state

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -108,7 +108,7 @@ figure {
 .icon {
   display: inline-block;
   margin-right: .15rem;
-  vertical-align: bottom;   
+  vertical-align: top;   
 }
 
 .icon,
