--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -84,7 +84,7 @@ pre[class*="language-"] {
 code {
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
-  font-size: .85em;
+  font-size: .85rem;
   hyphens: none;
   padding: .125em .25em;
   tab-size: 2;
