--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,6 +16,7 @@ $large-breakpoint: 36rem;
   --font-root-bold: "BitterBold", var(--font-fallback);
   --font-root-italic: "BitterItalic", var(--font-fallback);
   --font-root-bold-italic: "BitterBoldItalic", var(--font-fallback);
+  --font-secondary-regular: "OpenSansRegular", var(--font-fallback);
   --font-secondary-bold: "OpenSansBold", var(--font-fallback);
   --font-secondary-semi-bold: "OpenSansSemibold", var(--font-fallback);
   --font-tertiary-regular: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
@@ -48,6 +49,7 @@ $large-breakpoint: 36rem;
   --color-code-quaternary: #385d34;
   --color-code-quaternary-glare: #52894c;
   --color-code-quaternary-bright: #9cc598;
+  --color-core-text: var(--color-primary);
   --color-primary-info-text: var(--color-primary-info);
   --color-primary-info-bg: var(--color-shades-secondary-bright);  
   --color-shades-primary-text: var(--color-shades-primary);
