--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
     </header>
     <div class="flow">
       {{ content }}
+      {% include tags.html %}
     </div>
     <footer class="post-footer">
       {% include related-posts.html %}
