--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,7 +1,7 @@
 {% if page.path contains '_posts' or post.path contains '_posts' %}
     {% if page.tags.size > 0 or post.tags.size > 0 %}
 
-      <div class="cluster flow-space-size-2 gutter-base" aria-label="tags" role="list">
+      <div class="cluster flow-space-size-2 gutter-base stretch" aria-label="tags" role="list">
         {% for tag in page.tags %}
           <a href="/tags/{{ tag | downcase | url_encode }}" class="pill">{{ tag }}</a>
         {% endfor %}
