BEM and flow space update

--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -1,20 +1,20 @@
 <section class="social-media">
   <h3>Share this post</h3>
-  <div class="item">
+  <div class="social-media__item">
     <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
       <div class="icon-social icon-twitter">
         <div class="sr-hidden">Share this post on Twitter</div>
       </div>
     </a>
   </div>
-  <div class="item">
+  <div class="social-media__item">
     <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank">
       <div class="icon-social icon-facebook">
         <div class="sr-hidden">Share this post on Facebook</div>
       </div>
     </a>
   </div>
-  <div class="item">
+  <div class="social-media__item">
     <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
       <div class="icon-social icon-reddit">
         <div class="sr-hidden">Share this post on Reddit</div>
