--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <header role="banner">
+      <header class="heading__brand" role="banner">
         <div class="skip-nav">
           <a href="#content">Skip to main content</a>
         </div>
@@ -21,7 +21,7 @@
             <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
           </ul>
         </nav>
-        <div class="tagline">{{ site.tagline }}</div>
+        <div class="heading__tagline">{{ site.tagline }}</div>
       </header>
 
       <main id="content">
