--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -1,4 +1,4 @@
-<div class="post-metadata">
+<div class="post-header__metadata">
   {% if page.path contains '_posts' %}
     <div class="published" aria-label="Published on {{ page.date | date: '%b %-d, %Y' }}">{{ page.date | date: "%b %-d, %Y" }}</div>
   {% endif %}
