--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         {{ content }}
       </main>
 
-      <footer>
+      <footer class="page-footer">
         {% include social-channels.html %}
         <span>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. All rights reserved.</span>
       </footer>
