--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article>
   <div class="post">
     <header class="post-header">
-      <h2 class="post-title">{{ page.title }}</h2>
+      <h2 class="post-header__title">{{ page.title }}</h2>
       {% include post-metadata.html %}
     </header>
     <div class="flow">
