--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,7 +29,7 @@ main {
   margin: 1.75rem 0;
 }
 
-footer {
+.page-footer {
   font-family: var(--font-secondary-semi-bold);
   margin-bottom: 2rem;
   text-align: center;
