Update BEM and fix inherits

--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -2,21 +2,21 @@
   <h3>Share this post</h3>
   <div class="social-media__item">
     <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
-      <div class="icon-social icon-twitter">
+      <div class="icon-social icon-social__twitter">
         <div class="sr-hidden">Share this post on Twitter</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
     <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank">
-      <div class="icon-social icon-facebook">
+      <div class="icon-social icon-social__facebook">
         <div class="sr-hidden">Share this post on Facebook</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
     <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
-      <div class="icon-social icon-reddit">
+      <div class="icon-social icon-social__reddit">
         <div class="sr-hidden">Share this post on Reddit</div>
       </div>
     </a>
