--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -3,7 +3,7 @@
 
     <div class="cluster flow-space-size-2 gutter-base stretch" role="list" aria-label="tags">
       {% for tag in page.tags %}
-        <a href="/tags/{{ tag | url_encode }}" class="pill">{{ tag }}</a>
+        <a href="/tags/{{ tag | url_encode | downcase }}" class="pill">{{ tag }}</a>
       {% endfor %}
     </div>
 
