Fix page structure

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <div class="page">
-  <h2 class="page-title">{{ page.title }}</h2>
+  <header class="page-header">
+    <h2 class="page-header__title">{{ page.title }}</h2>
+  </header>
   {{ content }}
 </div>
