--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="skip-nav">
           <a href="#content">Skip to main content</a>
         </div>
-        <nav role="navigation" aria-label="Main navigation">
+        <nav aria-label="Main navigation">
           <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
           <ul>
             <li><a href="{{ site.baseurl }}/about">About</a></li>
