--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,7 +24,7 @@ main {
   flex: 1 0 auto;
 }
 
-.break {
+.border-rule {
   border-top: 1px solid var(--color-primary-info-bg);
   margin: 1.75rem 0;
 }
