--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-
-  {% if 'expr="$HTTP_COOKIE=/fonts\-loaded\=true/"' %}
-  <html lang="en">
-  {% else %}
-  <html lang="en">
-  {% endif %}
+<html lang="en">
 
   {% include head.html %}
 
   <body>
-    <div class="container">
+    <div class="page-container">
       <header class="heading__brand" role="banner">
         <div class="skip-nav">
           <a href="#content">Skip to main content</a>
