--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,7 @@
 //
 // Styles for managing the structural hierarchy of the site.
 
-.container {
+.page-container {
   display: flex;
   flex-direction: column;
   margin-left:  auto;
