--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -6,32 +6,31 @@ h1, h2, h3 {
   color: var(--color-shades-primary);
   font-family: var(--font-secondary-bold);
   line-height: 1.25;
-  margin-bottom: 1rem;
+}
+
+h2, h3 {
+  margin-top: 2rem;
 }
 
 h3 {
   font-size: var(--font-size-large);
-  margin-top: 1.5rem;
 }
 
 .flow {
-  --flow-space: 1.25rem;
-
-  .flow-space-size-2 {
-    --flow-space: clamp(2.375rem, 1.98rem + 1.96vw, 3.75rem)
-  }
+  --flow-space: 1.5rem;
 
   > * {
     margin-bottom: var(--flow-space);
     margin-top: 0;
+  }
 
-    &:last-of-type {
-      margin-bottom: 1.5rem;
-    }
+  .flow-space-size-2 {
+    --flow-space: clamp(2.375rem, 1.98rem + 1.96vw, 3.75rem)
   }
 }
 
 .render {
+
   &__md {
   font-size: calc(var(--font-size-large) * 1.2);
   }
