--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
           <a href="#content">Skip to main content</a>
         </div>
         <nav aria-label="Main navigation">
-          <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+          <h1 class="header__title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
           <ul>
             <li><a href="{{ site.baseurl }}/about">About</a></li>
             <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
