--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -99,7 +99,7 @@ blockquote {
 
 aside {
   &.message.notification {
-    background: var(--color-state-warn-bg);
+    background-color: var(--color-state-warn-bg);
     color: var(--color-state-warn-text);
     margin: 1.5rem 0;
   }
