--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,7 +1,3 @@
-// Layout
-//
-// Styles for managing the structural hierarchy of the site.
-
 .page-container {
   display: flex;
   flex-direction: column;
@@ -11,8 +7,6 @@
   min-height: 100vh;
   padding-left:  1.25rem;
   padding-right: 1.25rem;
-  //padding-left: clamp(1rem, 1.25rem, 4rem);
-  //padding-right: clamp(1rem, 1.25rem, 4rem);
 
   // WebKit mobile viewport bug fix
   @supports (-webkit-touch-callout: none) {
@@ -34,7 +28,6 @@ main {
   text-align: center;
 
   a {
-    
     &:hover {
       color: var(--color-primary-info-text);
 
@@ -45,6 +38,6 @@ main {
   }
 
   span {
-    font-size: .8rem;
+    font-size: var(--font-size-small);
   }
 }
