--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -1,7 +1,3 @@
-// Typography
-//
-// Headings, body text, lists, and other misc typographic elements.
-
 h1, h2, h3 {
   color: var(--color-shades-primary);
   font-weight: 600;
@@ -29,48 +25,23 @@ h3 {
   }
 }
 
-.render {
-
-  &--md {
-  font-size: calc(var(--font-size-large) * 1.2);
-  }
-}
-
-ul, ol, dl {
+ul, ol {
   margin-bottom: 1rem;
   margin-top: 0;
-}
 
-dt {
-  font-weight: bold;
-}
-
-dd {
-  margin-bottom: .5rem;
-}
-
-abbr {
-  color: var(--color-shades-secondary);
-  font-size: var(--font-size-small);
-  font-weight: bold;
-  text-transform: uppercase;
-
-  &[title] {
-    border-bottom: 1px dotted var(--color-primary-info-bg);
-    cursor: help;
+  li {
+    margin-bottom: .5rem;
   }
 }
 
 aside,
 blockquote {
-
   &.message {
     background-color: var(--color-shades-primary-bright);
     border-radius: .25rem;
     color:var(--color-state-info-text);
-    font-size: .9rem;
+    font-size: var(--font-size-small);
     margin: 1.5rem 0;
-    // padding: 1rem;
     padding: clamp(1.25rem, 1.5rem, 2rem);
     
     a {
@@ -90,40 +61,3 @@ aside {
     margin: 1.5rem 0;
   }
 }
-
-// sub,
-// sup {
-//   font-size: .75rem;
-//   line-height: 0;
-//   position: relative;
-//   vertical-align: baseline;
-// }
-
-// sub {
-//   bottom: -.25rem;
-// }
-
-// sup {
-//   top: -.5rem;
-// }
-
-
-
-// // Markdown footnotes
-// //
-// // See the example content post for an example.
-
-// // Footnote number within body text
-// a[href^="#fn:"],
-// // Back to footnote link
-// a[href^="#fnref:"] {
-//   font-weight: bold;
-//   display: inline-block;
-//   margin-left: .1rem;
-// }
-
-// // List of footnotes
-// .footnotes {
-//   font-size: .9rem;
-//   margin-top: 2rem;
-// }
