--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -5,7 +5,7 @@
   margin: 3rem 0;  
 }
 
-.pagination-item {
+.pagination__item {
   border: 2px solid var(--color-primary-info-bg);
   border-radius: 3rem;
   padding: 1rem;
