--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,17 +1,17 @@
 <div class="pagination" role="navigation" aria-label="Go to the next or previous page">
   {% if paginator.total_pages > 1 %}
     {% if paginator.previous_page %}
-      <a class="pagination-item" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">Newer posts</a>
+      <a class="pagination__item" href="{{ paginator.previous_page_path | prepend: site.baseurl }}">Newer posts</a>
     {% endif %}
     {% if paginator.next_page %}
-      <a class="pagination-item" href="{{ paginator.next_page_path | prepend: site.baseurl }}">Older posts</a>
+      <a class="pagination__item" href="{{ paginator.next_page_path | prepend: site.baseurl }}">Older posts</a>
     {% endif %}
   {% else %}
     {% if page.next.url %}
-      <a class="pagination-item" href="{{page.next.url}}">Next post</a>
+      <a class="pagination__item" href="{{page.next.url}}">Next post</a>
     {% endif %}
     {% if page.previous.url %}
-      <a class="pagination-item" href="{{page.previous.url}}">Previous post</a>
+      <a class="pagination__item" href="{{page.previous.url}}">Previous post</a>
     {% endif %}
   {% endif %}
 </div>
