--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -1,8 +1,8 @@
 <aside class="related" role="complementary" aria-label="Recent posts"> 
-  <h3>Recent posts</h3>
-  <ul>
+  <h3 class="related__title">Recent posts</h3>
+  <ul class="related__list">
     {% for post in site.posts limit:3 %}
-      <li>
+      <li class="related__item">
         <a href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
         </a>
