--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,11 @@
         <div class="skip-nav">
           <a href="#content">Skip to main content</a>
         </div>
-        <nav aria-label="Main navigation">
-          <h1 class="header__title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-          <ul>
-            <li><a href="{{ site.baseurl }}/about">About</a></li>
-            <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+        <nav class="header-nav" aria-label="Main navigation">
+          <h1 class="header-nav__title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+          <ul class="header-nav__list">
+            <li class="header-nav__item"><a href="{{ site.baseurl }}/about">About</a></li>
+            <li class="header-nav__item"><a href="{{ site.baseurl }}/contact">Contact</a></li>
           </ul>
         </nav>
         <div class="heading__tagline">{{ site.tagline }}</div>
