Update font size

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -18,7 +18,7 @@ blockquote {
     background-color: var(--color-shades-primary-bright);
     border-radius: .25rem;
     color:var(--color-state-info-text);
-    font-size: calc(var(--font-size-small) * 1.0575);
+    font-size: .9rem;
     margin: 1.5rem 0;
     padding: clamp(1.25rem, 1.5rem, 2rem);
     
