--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -13,7 +13,7 @@
     <div class="comments"><a href="{{ site.baseurl }}{{ post.url }}#disqus_thread" aria-describedby="adb-comments">Comments</a></div>
   {% endif %}
 
-  <div class="sr-hidden" id="adb-comments">
+  <div class="sr-only" id="adb-comments">
     Go to comments about '{{ post.title }}
   </div>
 </div>
