--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -3,21 +3,21 @@
   <div class="social-media__item">
     <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
       <div class="social__icon social__icon--twitter">
-        <div class="sr-hidden">Share this post on Twitter</div>
+        <div class="sr-only">Share this post on Twitter</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
     <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank">
       <div class="social__icon social__icon--facebook">
-        <div class="sr-hidden">Share this post on Facebook</div>
+        <div class="sr-only">Share this post on Facebook</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
     <a href="https://reddit.com/submit?title={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank">
       <div class="social__icon social__icon--reddit">
-        <div class="sr-hidden">Share this post on Reddit</div>
+        <div class="sr-only">Share this post on Reddit</div>
       </div>
     </a>
   </div>
