--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -2,28 +2,28 @@
   <div class="social-media__item">
     <a href="{{ site.author.twitter }}" rel="external">
       <div class="social__icon social__icon--twitter">
-        <div class="sr-hidden">Follow me on Twitter</div>
+        <div class="sr-only">Follow me on Twitter</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
     <a href="{{ site.author.linkedin }}" rel="external">
       <div class="social__icon social__icon--linkedin">
-        <div class="sr-hidden">Follow me on LinkedIn</div>
+        <div class="sr-only">Follow me on LinkedIn</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
     <a href="{{ site.author.github }}" rel="external">
       <div class="social__icon social__icon--github">
-        <div class="sr-hidden">Follow me on GitHub</div>
+        <div class="sr-only">Follow me on GitHub</div>
       </div>
     </a>
   </div>
   <div class="social-media__item">
     <a href="{{ site.author.codepen }}" rel="external">
       <div class="social__icon social__icon--codepen">
-        <div class="sr-hidden">Follow me on CodePen</div>
+        <div class="sr-only">Follow me on CodePen</div>
       </div>
     </a>
   </div>
