--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -54,11 +54,13 @@ a {
   outline-offset: .15rem;
 }
 
-.sr-hidden {
+.sr-only {
+  border: none;
+  clip: rect(0 0 0 0);
   height: 1px;
-  left: -10000px;
+  margin: -1px;
   overflow: hidden;
+  padding: 0;
   position: absolute;
-  top: auto;
   width: 1px;
 }
