--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
       {% include tags.html %}
     </div>
     <footer class="post-footer">
-      {% include related-posts.html %}
+      <!--{% include related-posts.html %}-->
     </footer>
   </div>
 </article>
