Update theme color

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -85,7 +85,7 @@
   <link rel="icon" href="{{ site.baseurl}}/img/favicon/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/favicon/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
   <link rel="manifest" href="{{ site.baseurl }}/img/favicon//manifest.webmanifest">
-  <meta name="theme-color" content="#303030">
+  <meta name="theme-color" content="#174ea6">
 
   <link rel="me" href="{{ site.author.codepen }}">
   <link rel="me" href="{{ site.author.github }}">
