--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,7 @@
       </footer>
     </div>
     
-    <script async src="{{ site.baseurl }}/js/prism.js"></script>
-    <script async src="{{ site.baseurl }}/js/scroll.js"></script>
+    <script async src="{{ site.baseurl }}/js/main.js?v={{ site.time | date: '%s' }}"></script>
     {% if jekyll.environment == "production" %}
       <script async id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js"></script>
       
