--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,13 +36,23 @@
     {% if jekyll.environment == "production" %}
       <script async id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js"></script>
       
-      <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics_id }}"></script>
+      <!--<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics_id }}"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', '{{ site.analytics_id }}');
+      </script>-->
+
+      <!-- GA4 -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga4Id }}"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '{{ site.ga4Id }}');
       </script>
     {% endif %}
   </body>
